--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "third_party/BTrack"]
 	path = third_party/BTrack
 	url = https://github.com/jkammerl/BTrack.git
+[submodule "third_party/portmidi"]
+	path = third_party/portmidi
+	url = https://github.com/mixxxdj/portmidi.git
