--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "third_party/portmidi"]
 	path = third_party/portmidi
 	url = https://github.com/mixxxdj/portmidi.git
+[submodule "third_party/serialib"]
+	path = third_party/serialib
+	url = https://github.com/imabot2/serialib.git
