--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,11 +73,12 @@ SET (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/Modules
 
 add_subdirectory(third_party)
 
-add_executable (AudioMidiClockSync src/main.cpp src/midi.cpp  src/gpio.cpp src/bpm_pd.cpp src/beat_tracker.cpp src/audio_io.cpp)
+add_executable (AudioMidiClockSync src/main.cpp src/midi.cpp  src/serial.cpp src/bpm_pd.cpp src/beat_tracker.cpp src/audio_io.cpp)
 include_directories("src", ${PortAudio_INCLUDE_DIRS})
+include_directories("src", ${seriallib_INCLUDE_DIRS})
 include_directories("src", ${PortMidi_INCLUDE_DIRS})
 #target_compile_definitions(AudioMidiClockSync PRIVATE RPI=1)
 
-target_link_libraries (AudioMidiClockSync LINK_PUBLIC PortAudio PortMidi kissfft BTrack)
+target_link_libraries (AudioMidiClockSync LINK_PUBLIC serialib PortAudio PortMidi kissfft BTrack)
 install (TARGETS AudioMidiClockSync DESTINATION bin)
 
